--- a/source/index.html
+++ b/source/index.html
@@ -14,7 +14,7 @@
 </head>
 
 <body class="page__body">
-  <header class="main-header">
+  <header class="main-header main-header__main-page">
     <nav class="main-nav wrapper">
       <div class="main-nav__header">
         <a class="logo" href="index.html">
@@ -35,17 +35,17 @@
       <div class="main-nav__wrapper">
         <ul class="main-nav__list site-list">
           <li class="main-nav__item site-list__item">
-            <a class="main-nav__item-link main-nav__item-link--active" href="index.html">
+            <a class="main-nav__item-link main-nav__item-link--second main-nav__item-link--active main-nav__item-link--active-second" href="index.html">
               Главная
             </a>
           </li>
           <li class="main-nav__item site-list__item">
-            <a class="main-nav__item-link" href="catalog.html">
+            <a class="main-nav__item-link main-nav__item-link--second" href="catalog.html">
               Каталог продукции
             </a>
           </li>
           <li class="main-nav__item site-list__item">
-            <a class="main-nav__item-link" href="#">
+            <a class="main-nav__item-link main-nav__item-link--second" href="#">
               Подбор программы
             </a>
           </li>
