--- a/source/index.html
+++ b/source/index.html
@@ -14,7 +14,7 @@
 </head>
 
 <body class="page__body">
-  <header class="main-header main-header__main-page">
+  <header class="main-header main-header--first">
     <nav class="main-nav wrapper">
       <div class="main-nav__header">
         <a class="logo" href="index.html">
