--- a/source/catalog.html
+++ b/source/catalog.html
@@ -35,7 +35,7 @@
         </div>
 
       </div>
-      <div class="main-nav__wrapper .main-nav__wrapper-catalog">
+      <div class="main-nav__wrapper main-nav__wrapper--catalog">
         <ul class="main-nav__list site-list">
           <li class="main-nav__item site-list__item">
             <a class="main-nav__item-link" href="index.html">
@@ -401,9 +401,6 @@
           </button>
         </form>
       </div>
-
-      </div>
-
     </section>
   </main>
   <footer class="main-footer ">
