Добавила состояния и интерактивную карту

--- a/source/index.html
+++ b/source/index.html
@@ -29,13 +29,13 @@
               <img class="logo__logo-image" src="images/logo-text-mobile.svg" alt="Логотип Заголовок" width="101" height="18">
             </picture>
           </a>
-          <button class="main-nav__toggle main-nav__toggle--close" type="button">
+          <button class="main-nav__toggle" type="button">
             <span class="visually-hidden">Открыть меню</span>
           </button>
         </div>
       </div>
       <div class="main-nav__wrapper">
-        <ul class="main-nav__list site-list">
+        <ul class="main-nav__list site-list main-nav__list--nojs">
           <li class="main-nav__item site-list__item">
             <a class="main-nav__item-link main-nav__item-link--second main-nav__item-link--active main-nav__item-link--active-second" href="index.html">
               Главная
@@ -170,13 +170,14 @@
         </div>
       </div>
 
-      <picture class="contacts__map">
+      <picture class="contacts__map contacts__map--img">
         <source width="1280" height="400" type="image/png" media="(min-width: 1280px)" srcset="images/location-desktop@1x.png 1x, images/location-desktop@2x.png 2x">
         <source width="768" height="400" type="image/png" media="(min-width: 768px)" srcset="images/location-tablet@1x.png 1x, images/location-tablet@2x.png 2x">
         <img class="contacts__map" src="images/location-mobile@1x.png" srcset="images/location-mobile@2x.png 2x" alt="Мы на карте" width="320" height="362">
       </picture>
+      <iframe class="contacts__map contacts__map--iframe" src="https://yandex.ru/map-widget/v1/?ll=30.323036%2C59.938631&mode=search&ol=geo&ouri=ymapsbm1%3A%2F%2Fgeo%3Fdata%3DCgg1NzM5NDE4NBJh0KDQvtGB0YHQuNGPLCDQodCw0L3QutGCLdCf0LXRgtC10YDQsdGD0YDQsywg0JHQvtC70YzRiNCw0Y8g0JrQvtC90Y7RiNC10L3QvdCw0Y8g0YPQu9C40YbQsCwgMTkvOCIKDZaV8kEVKcFvQg%2C%2C&utm_source=ntp_chrome&z=17.59" width="320" height="362" allowfullscreen="true" title="Офис компании по адресу Санкт-Петербург, ул. Большая Конюшенная, д. 19/8"></iframe>
     </section>
-    <section class="social">
+    <section class=" social">
       <h2 class="visually-hidden">
         Мы в сети
       </h2>
