--- a/source/catalog.html
+++ b/source/catalog.html
@@ -29,14 +29,14 @@
               <img class="logo__logo-image" src="images/logo-text-mobile.svg" alt="Логотип Заголовок" width="101" height="18">
             </picture>
           </a>
-          <button class="main-nav__toggle main-nav__toggle--close" type="button">
+          <button class="main-nav__toggle" type="button">
             <span class="visually-hidden">Открыть меню</span>
           </button>
         </div>
 
       </div>
-      <div class="main-nav__wrapper main-nav__wrapper--catalog">
-        <ul class="main-nav__list site-list">
+      <div class="main-nav__wrapper">
+        <ul class="main-nav__list site-list main-nav__list--nojs">
           <li class="main-nav__item site-list__item">
             <a class="main-nav__item-link" href="index.html">
               Главная
