--- a/source/index.html
+++ b/source/index.html
@@ -29,7 +29,7 @@
               <img class="logo__logo-image" src="images/logo-text-mobile.svg" alt="Логотип Заголовок" width="101" height="18">
             </picture>
           </a>
-          <button class="main-nav__toggle" type="button">
+          <button class="main-nav__toggle main-nav__toggle--nojs" type="button">
             <span class="visually-hidden">Открыть меню</span>
           </button>
         </div>
@@ -47,7 +47,7 @@
             </a>
           </li>
           <li class="main-nav__item site-list__item">
-            <a class="main-nav__item-link main-nav__item-link--second" href="#">
+            <a class="main-nav__item-link main-nav__item-link--second" href="404.html">
               Подбор программы
             </a>
           </li>
@@ -114,7 +114,7 @@
           Замените один-два приема обычной еды на наше функциональное питание.
         </li>
         <li class="functions__item functions__item--clock">
-          Уже через месяц наслаждайтесь изменениями к лучшему вашего питомца!
+          Уже через месяц наслаждайтесь изменениями к лучшему вашего&nbsp;питомца!
         </li>
       </ul>
     </section>
@@ -169,13 +169,12 @@
           </div>
         </div>
       </div>
-
+      <iframe class="contacts__map contacts__map--iframe" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1998.6036257198464!2d30.320472477840497!3d59.9387191620931!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4696310fca145cc1%3A0x42b32648d8238007!2z0JHQvtC70YzRiNCw0Y8g0JrQvtC90Y7RiNC10L3QvdCw0Y8g0YPQuy4sIDE5LzgsINCh0LDQvdC60YIt0J_QtdGC0LXRgNCx0YPRgNCzLCAxOTExODY!5e0!3m2!1sru!2sru!4v1737450356568!5m2!1sru!2sru" width="320" height="362" allowfullscreen="" loading="lazy" title="Офис компании по адресу Санкт-Петербург, ул. Большая Конюшенная, д. 19/8"></iframe>
       <picture class="contacts__map contacts__map--img">
         <source width="1280" height="400" type="image/png" media="(min-width: 1280px)" srcset="images/location-desktop@1x.png 1x, images/location-desktop@2x.png 2x">
         <source width="768" height="400" type="image/png" media="(min-width: 768px)" srcset="images/location-tablet@1x.png 1x, images/location-tablet@2x.png 2x">
         <img class="contacts__map" src="images/location-mobile@1x.png" srcset="images/location-mobile@2x.png 2x" alt="Мы на карте" width="320" height="362">
       </picture>
-      <iframe class="contacts__map contacts__map--iframe" src="https://yandex.ru/map-widget/v1/?ll=30.323036%2C59.938631&mode=search&ol=geo&ouri=ymapsbm1%3A%2F%2Fgeo%3Fdata%3DCgg1NzM5NDE4NBJh0KDQvtGB0YHQuNGPLCDQodCw0L3QutGCLdCf0LXRgtC10YDQsdGD0YDQsywg0JHQvtC70YzRiNCw0Y8g0JrQvtC90Y7RiNC10L3QvdCw0Y8g0YPQu9C40YbQsCwgMTkvOCIKDZaV8kEVKcFvQg%2C%2C&utm_source=ntp_chrome&z=17.59" width="320" height="362" allowfullscreen="true" title="Офис компании по адресу Санкт-Петербург, ул. Большая Конюшенная, д. 19/8"></iframe>
     </section>
     <section class=" social">
       <h2 class="visually-hidden">
