--- a/source/404.html
+++ b/source/404.html
@@ -1,14 +1,107 @@
 <!DOCTYPE html>
 <html class="page" lang="ru">
-  <head>
-    <meta charset="UTF-8">
-    <title>404</title>
-    <meta name="viewport" content="width=device-width,initial-scale=1">
-    <link rel="stylesheet" href="styles/styles.css">
-    <script src="scripts/index.js" defer></script>
-  </head>
-  <body class="page__body">
-    <h1>404</h1>
-    <p>Страница не найдена. <a href="/">Перейти на главную</a>.</p>
-  </body>
+
+<head>
+  <meta charset="UTF-8">
+  <title>404</title>
+  <meta name="viewport" content="width=device-width,initial-scale=1">
+  <link rel="stylesheet" href="styles/styles.css">
+  <script src="scripts/index.js" defer></script>
+</head>
+
+<body class="page__body">
+  <header class="main-header">
+    <nav class="main-nav">
+      <div class="main-nav__header ">
+        <div class="main-nav__header-wrapper wrapper">
+          <a class="logo" href="index.html">
+            <picture>
+              <source width="70" height="59" type="image/svg+xml" media="(min-width: 1280px)" srcset="images/logo-pic-desktop.svg">
+              <source width="60" height="50" type="image/svg+xml" media="(min-width: 768px)" srcset="images/logo-pic-tablet.svg">
+              <img class="logo__logo-image" src="images/logo-pic-mobile.svg" alt="Логотип Котик" width="33" height="38">
+            </picture>
+            <picture>
+              <source width="101" height="18" type="image/svg+xml" media="(min-width: 768px)" srcset="images/logo-text-tablet.svg">
+              <img class="logo__logo-image" src="images/logo-text-mobile.svg" alt="Логотип Заголовок" width="101" height="18">
+            </picture>
+          </a>
+          <button class="main-nav__toggle main-nav__toggle--nojs" type="button">
+            <span class="visually-hidden">Открыть меню</span>
+          </button>
+        </div>
+
+      </div>
+      <div class="main-nav__wrapper">
+        <ul class="main-nav__list site-list main-nav__list--nojs">
+          <li class="main-nav__item site-list__item">
+            <a class="main-nav__item-link" href="index.html">
+              Главная
+            </a>
+          </li>
+          <li class="main-nav__item site-list__item">
+            <a class="main-nav__item-link main-nav__item-link--active" href="catalog.html">
+              Каталог продукции
+            </a>
+          </li>
+          <li class="main-nav__item site-list__item">
+            <a class="main-nav__item-link" href="404.html">
+              Подбор программы
+            </a>
+          </li>
+        </ul>
+      </div>
+    </nav>
+  </header>
+  <h1>404</h1>
+  <p>Страница не найдена. <a href="/">Перейти на главную</a>.</p>
+  <footer class="main-footer ">
+    <section class="contacts contacts--second">
+      <div class="wrapper">
+        <div class="contacts__main">
+          <h3 class="contacts__header">приглашаем <br>к сотрудничеству дилеров!</h3>
+          <div class="contacts__address">
+            <span class="contacts__address-text">ул. Большая
+              Конюшенная, д. 19/8</span>
+            <span class="contacts__address-text">Санкт-Петербург</span>
+          </div>
+        </div>
+      </div>
+    </section>
+    <section class="social">
+      <h2 class="visually-hidden">
+        Мы в сети
+      </h2>
+      <div class="social__content wrapper">
+        <a class="main-footer__logo" href="#">
+          <img class="main-footer__logo-image" src="images/footer-logo.svg" alt="Логотип Заголовок" width="128" height="24">
+        </a>
+        <ul class="main-footer__list">
+          <li class="main-footer__item">
+            <a class="main-footer__link main-footer__link--vk" href="https://vk.com/htmlacademy">
+              <span class="visually-hidden">Мы в контакте</span>
+            </a>
+          </li>
+          <li class="main-footer__item">
+            <a class="main-footer__link main-footer__link--youtube" href="https://youtube.com/htmlacademy">
+
+              <span class="visually-hidden">Мы в youtube</span>
+            </a>
+          </li>
+          <li class="main-footer__item">
+            <a class="main-footer__link main-footer__link--telegram" href="https://vk.com/htmlacademy">
+              <span class="visually-hidden">Мы в telegram</span>
+            </a>
+          </li>
+        </ul>
+        <a class="academy" href="https://htmlacademy.ru/intensive/adaptive">
+          <span class="academy__text">HTML Academy</span>
+          <svg class="academy__logo" width="27" height="34">
+            <use href="icons/stack.svg#logo-html"></use>
+          </svg>
+        </a>
+      </div>
+    </section>
+  </footer>
+</body>
+
 </html>
