PP каталог и индекс

--- a/source/catalog.html
+++ b/source/catalog.html
@@ -26,7 +26,7 @@
             </picture>
             <picture>
               <source width="101" height="18" type="image/svg+xml" media="(min-width: 768px)" srcset="images/logo-text-tablet.svg">
-              <img class="logo__logo-image" src="images/logo-text-mobile.svg" alt="Логотип Заголовок" width="101" height="18">
+              <img class="logo__logo-image logo__logo-image--text" src="images/logo-text-mobile.svg" alt="Логотип Заголовок" width="101" height="18">
             </picture>
           </a>
           <button class="main-nav__toggle main-nav__toggle--nojs" type="button">
@@ -385,7 +385,7 @@
         </ul>
         <div class="sub-products__actions">
           <span class="sub-products__actions-description">Закажите все
-            и получите чехол для
+            и&nbsp;получите чехол&nbsp;для
             кота в подарок!</span>
         </div>
       </div>
