--- a/source/index.html
+++ b/source/index.html
@@ -26,7 +26,7 @@
             </picture>
             <picture>
               <source width="101" height="18" type="image/svg+xml" media="(min-width: 768px)" srcset="images/logo-text-tablet.svg">
-              <img class="logo__logo-image" src="images/logo-text-mobile.svg" alt="Логотип Заголовок" width="101" height="18">
+              <img class="logo__logo-image logo__logo-image--text" src="images/logo-text-mobile.svg" alt="Логотип Заголовок" width="101" height="18">
             </picture>
           </a>
           <button class="main-nav__toggle main-nav__toggle--nojs" type="button">
@@ -137,7 +137,8 @@
             </li>
           </ul>
           <span class="example__text">
-            Затраты на питание: 15 000 РУБ.
+            <span>Затраты на питание:</span>
+            <span>15 000 РУБ.</span>
           </span>
         </div>
         <div class="cat-slider">
