--- a/source/catalog.html
+++ b/source/catalog.html
@@ -63,7 +63,7 @@
       </h1>
       <ul class="catalog__list">
         <li class="catalog__item card">
-          <a class="card__item-link link" href="#">
+          <a class="card__item-link link" href="404.html">
             <picture class="card__image">
               <source width="169" height="210" type="image/png" media="(min-width: 1280px)" srcset="images/pro500-desktop@1x.png 1x, images/pro500-desktop@2x.png 2x">
               <source width="200" height="210" type="image/png" media="(min-width: 768px)" srcset="images/pro500-tablet@1x.png 1x, images/pro500-tablet@2x.png 2x">
@@ -72,7 +72,7 @@
           </a>
           <div class="card__content">
             <h3 class="card__item-title">
-              <a class="card__item-link card__item-title link" href="#">
+              <a class="card__item-link card__item-title link" href="404.html">
                 Cat&nbsp;Energy
                 PRO
                 500 г
@@ -95,12 +95,12 @@
               </tbody>
             </table>
           </div>
-          <a class="card__button button" href="#">
+          <a class="card__button button" href="404.html">
             Заказать
           </a>
         </li>
         <li class="catalog__item card">
-          <a class="card__item-link link" href="#">
+          <a class="card__item-link link" href="404.html">
             <picture>
               <source width="169" height="210" type="image/png" media="(min-width: 1280px)" srcset="images/pro1000-desktop@1x.png 1x, images/pro1000-desktop@2x.png 2x">
               <source width="200" height="210" type="image/png" media="(min-width: 768px)" srcset="images/pro1000-tablet@1x.png 1x, images/pro1000-tablet@2x.png 2x">
@@ -109,7 +109,7 @@
           </a>
           <div class="card__content">
             <h3 class="card__item-title">
-              <a class="card__item-link card__item-title link" href="#">Cat&nbsp;Energy
+              <a class="card__item-link card__item-title link" href="404.html">Cat&nbsp;Energy
                 PRO
                 1000 г</a>
             </h3>
@@ -130,12 +130,12 @@
               </tbody>
             </table>
           </div>
-          <a class="card__button button" href="#">
+          <a class="card__button button" href="404.html">
             Заказать
           </a>
         </li>
         <li class="catalog__item card">
-          <a class="card__item-link link" href="#">
+          <a class="card__item-link link" href="404.html">
             <picture>
               <source width="169" height="210" type="image/png" media="(min-width: 1280px)" srcset="images/pro500-2-desktop@1x.png 1x, images/pro500-2-desktop@2x.png 2x">
               <source width="200" height="210" type="image/png" media="(min-width: 768px)" srcset="images/pro500-2-tablet@1x.png 1x, images/pro500-2-tablet@2x.png 2x">
@@ -144,7 +144,7 @@
           </a>
           <div class="card__content">
             <h3 class="card__item-title">
-              <a class="card__item-link card__item-title link" href="#">
+              <a class="card__item-link card__item-title link" href="404.html">
                 Cat&nbsp;Energy
                 PRO
                 500 г
@@ -168,12 +168,12 @@
             </table>
           </div>
 
-          <a class="card__button button" href="#">
+          <a class="card__button button" href="404.html">
             Заказать
           </a>
         </li>
         <li class="catalog__item card">
-          <a class="card__item-link link" href="#">
+          <a class="card__item-link link" href="404.html">
             <picture>
               <source width="169" height="210" type="image/png" media="(min-width: 1280px)" srcset="images/pro1000-2-desktop@1x.png 1x, images/pro1000-2-desktop@2x.png 2x">
               <source width="200" height="210" type="image/png" media="(min-width: 768px)" srcset="images/pro1000-2-tablet@1x.png 1x, images/pro1000-2-tablet@2x.png 2x">
@@ -182,7 +182,7 @@
           </a>
           <div class="card__content">
             <h3 class="card__item-title">
-              <a class="card__item-link card__item-title link" href="#">
+              <a class="card__item-link card__item-title link" href="404.html">
                 Cat&nbsp;Energy
                 PRO
                 1000 г</a>
@@ -205,12 +205,12 @@
             </table>
           </div>
 
-          <a class="card__button button" href="#">
+          <a class="card__button button" href="404.html">
             Заказать
           </a>
         </li>
         <li class="catalog__item card">
-          <a class="card__item-link link" href="#">
+          <a class="card__item-link link" href="404.html">
             <picture>
               <source width="169" height="210" type="image/png" media="(min-width: 1280px)" srcset="images/slim500-desktop@1x.png 1x, images/slim500-desktop@2x.png 2x">
               <source width="200" height="210" type="image/png" media="(min-width: 768px)" srcset="images/slim500-tablet@1x.png 1x, images/slim500-tablet@2x.png 2x">
@@ -219,7 +219,7 @@
           </a>
           <div class="card__content">
             <h3 class="card__item-title">
-              <a class="card__item-link card__item-title link" href="#">Cat&nbsp;Energy
+              <a class="card__item-link card__item-title link" href="404.html">Cat&nbsp;Energy
                 SLIM
                 500 г</a>
             </h3>
@@ -240,12 +240,12 @@
               </tbody>
             </table>
           </div>
-          <a class="card__button button" href="#">
+          <a class="card__button button" href="404.html">
             Заказать
           </a>
         </li>
         <li class="catalog__item card">
-          <a class="card__item-link link" href="#">
+          <a class="card__item-link link" href="404.html">
             <picture>
               <source width="169" height="210" type="image/png" media="(min-width: 1280px)" srcset="images/slim1000-desktop@1x.png 1x, images/slim1000-desktop@2x.png 2x">
               <source width="200" height="210" type="image/png" media="(min-width: 768px)" srcset="images/slim1000-tablet@1x.png 1x, images/slim1000-tablet@2x.png 2x">
@@ -253,7 +253,7 @@
             </picture>
           </a>
           <div class="card__content">
-            <h3 class="card__item-title"><a class="card__item-link card__item-title link" href="#">
+            <h3 class="card__item-title"><a class="card__item-link card__item-title link" href="404.html">
                 Cat&nbsp;Energy
                 SLIM
                 1000 г</a>
@@ -275,12 +275,12 @@
               </tbody>
             </table>
           </div>
-          <a class="card__button button" href="#">
+          <a class="card__button button" href="404.html">
             Заказать
           </a>
         </li>
         <li class="catalog__item card">
-          <a class="card__item-link link" href="#">
+          <a class="card__item-link link" href="404.html">
             <picture>
               <source width="169" height="210" type="image/png" media="(min-width: 1280px)" srcset="images/slim500-2-desktop@1x.png 1x, images/slim500-2-desktop@2x.png 2x">
               <source width="200" height="210" type="image/png" media="(min-width: 768px)" srcset="images/slim500-2-tablet@1x.png 1x, images/slim500-2-tablet@2x.png 2x">
@@ -289,7 +289,7 @@
           </a>
           <div class="card__content">
             <h3 class="card__item-title">
-              <a class="card__item-link card__item-title link" href="#">
+              <a class="card__item-link card__item-title link" href="404.html">
                 Cat&nbsp;Energy
                 SLIM
                 500 г
@@ -314,7 +314,7 @@
             </table>
 
           </div>
-          <a class="card__button button" href="#">
+          <a class="card__button button" href="404.html">
             Заказать
           </a>
         </li>
@@ -323,14 +323,14 @@
             <svg class="card__plus" width="30" height="30">
               <use href="icons/stack.svg#plus"></use>
             </svg>
-            <a class="card__item-link  link" href="#">
+            <a class="card__item-link  link" href="404.html">
               <h3 class="card__item-title card__item-title--more">
                 Показать еще 100500 товаров
               </h3>
             </a>
             <span class="card__item-description">На самом деле вкусов гораздо больше!</span>
           </div>
-          <a class="card__button button button--second" href="#">
+          <a class="card__button button button--second" href="404.html">
             Показать все
           </a>
         </li>
@@ -348,7 +348,7 @@
               <span class="sub-products__text">1 упаковка (100 г)</span>
               <span class="sub-products__text">200 ₽</span>
             </div>
-            <a class="sub-products__button button" href="#">
+            <a class="sub-products__button button" href="404.html">
               Заказать
             </a>
           </li>
@@ -358,7 +358,7 @@
               <span class="sub-products__text">5 литров</span>
               <span class="sub-products__text">50 ₽</span>
             </div>
-            <a class="sub-products__button button" href="#">
+            <a class="sub-products__button button" href="404.html">
               Заказать
             </a>
           </li>
@@ -368,7 +368,7 @@
               <span class="sub-products__text">1 литр</span>
               <span class="sub-products__text">100 ₽</span>
             </div>
-            <a class="sub-products__button button" href="#">
+            <a class="sub-products__button button" href="404.html">
               Заказать
             </a>
           </li>
@@ -378,7 +378,7 @@
               <span class="sub-products__text">1 упаковка (30 г)</span>
               <span class="sub-products__text">300 ₽</span>
             </div>
-            <a class="sub-products__button button" href="#">
+            <a class="sub-products__button button" href="404.html">
               Заказать
             </a>
           </li>
@@ -432,7 +432,7 @@
         Мы в сети
       </h2>
       <div class="social__content wrapper">
-        <a class="main-footer__logo" href="#">
+        <a class="main-footer__logo" href="index.html">
           <img class="main-footer__logo-image" src="images/footer-logo.svg" alt="Логотип Заголовок" width="128" height="24">
         </a>
         <ul class="main-footer__list">
