--- a/source/index.html
+++ b/source/index.html
@@ -64,7 +64,7 @@
             <source width="709" height="609" type="image/png" media="(min-width: 768px)" srcset="images/index-can-tablet@1x.png 1x, images/index-can-tablet@2x.png 2x">
             <img class="promo__promo-image" src="images/index-can-mobile@1x.png" srcset="images/index-can-mobile@2x.png 2x" alt="Промо фото продукции" width="280" height="270">
           </picture>
-          <a class="promo__button button" href="#">
+          <a class="promo__button button" href="404.html">
             Подобрать программу
           </a>
         </div>
